<resources>
    <string name="app_name">Kotlin</string>
    <string name="button_to_cycle">1 To Life Cycle Events</string>
    <string name="button_to_click">2 To Click Events</string>
    <string name="button_to_android_extensions">3 To Kotlin Android Extensions</string>
    <string name="button_to_picasso">4 To Picasso</string>
    <string name="button_to_list_view">5 To List View</string>
    <string name="button_to_intent">6 To Intents</string>
    <string name="button_to_permissions">7 To Permissions</string>
    <string name="button_to_shared_preferences">8 To Shared Preferences</string>
    <string name="button_to_extension_functions">9 To Extension Functions</string>
    <string name="button_click_xml">Click XML</string>
    <string name="button_click_line">Click in Line</string>
    <string name="button_multi_1">Click Multi 1</string>
    <string name="button_multi_2">Click Multi 2</string>
    <string name="button_multi_3">Click Multi 3</string>
    <string name="button_kat_id">Button By ID</string>
    <string name="button_kat_kat">Button By KAT</string>
    <string name="button_intent_Extras">Intent Extras</string>
    <string name="button_intent_flags">Intent Flags</string>
    <string name="button_intent_object">Intent Object</string>
    <string name="button_go_back">ATRÁS</string>
    <string name="button_take_picture">Tomar Foto</string>
    <string name="button_take_picture_out">Foto Sin Permisos</string>
    <string name="preferences_name_hint">Agregar Nombre</string>
    <string name="preferences_age_hint">Edad</string>
    <string name="button_save">Guardar</string>
</resources>
