<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <Button
            android:id="@+id/button_to_cycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_cycle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>
    <Button
            android:id="@+id/button_to_click"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_to_click"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_to_cycle"
            />

    <Button
            android:id="@+id/button_to_android_extensions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_android_extensions"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_click"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/button_to_picasso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_picasso"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_android_extensions"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/button_to_list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_list_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_picasso"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/button_to_intent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_intent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_list_view"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/button_to_permissions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_permissions"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_intent"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/button_to_shared_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_shared_preferences"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_permissions"
            android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/button_to_extension_functions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_to_extension_functions"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_to_shared_preferences"
            android:layout_marginTop="32dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>